Improve Server Implicitness (#9)
Basicaly the client was previously required to do a lot of logic to fill
in the blanks, by pushing this into the server it simplifies all clients
and improves UX.
